Fixed unintended Overflow in close ups.

--- a/late-2025/css/style.css
+++ b/late-2025/css/style.css
@@ -107,6 +107,8 @@ footer {
 	opacity: 0;
 
 	z-index: 1;
+
+	overflow: hidden;
 }
 
 #close-up-container .close-btn {
